# LockLeaf

./: .gitignore  README.md  pyproject.toml  requirements.txt
coreleaf/: manage.py  requirements.txt  schema.yml
coreleaf/accounts/: admin.py  encryption.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
coreleaf/accounts/migrations/: 0001_initial.py  0002_encryptionkey.py  0003_alter_encryptionkey_key.py  0004_alter_user_managers_alter_user_email_and_more.py  0005_remove_user_username.py  0006_user_salt.py
coreleaf/coreleaf/: asgi.py  settings.py  urls.py  wsgi.py
coreleaf/vaults/: admin.py  apps.py  encryption.py  models.py  serializers.py  signals.py  tests.py  urls.py  vault_token.py  views.py
coreleaf/vaults/migrations/: 0001_initial.py  0002_delete_encryptionkey.py  0003_item_iv.py  0004_vault_delete_item.py
dev_testing/: example copy.http  example.http
