[project]
name = "lockleaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "cffi==2.0.0",
    "cryptography==46.0.3",
    "django==6.0",
    "django-appconf==1.2.0",
    "django-cors-headers==4.9.0",
    "django-cryptography==1.1",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "hiredis==3.3.0",
    "inflection==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "pycparser==2.23",
    "pyjwt==2.10.1",
    "python-decouple==3.8",
    "pyyaml==6.0.3",
    "redis==7.1.1",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "sqlparse==0.5.4",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
]
